tests/res/traits/error_name_collision.say
// A trait shares the one-name-per-scope namespace with type/fn/say.
trait Shape { pub fn area() { return 0; } }
type Shape { init() {} } // error: 'Shape' already declared in this scope
